ingress/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeguard-dev-ingress
  namespace: kubeguard-dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: hmsclinic-ssl
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: dev.hmsclinic.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-active
                port:
                  number: 80
