ingress/rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-ingress
  namespace: argo-rollouts
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: hmsclinic-ssl
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: rollouts.hmsclinic.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
